Settle Some Sync Issues; Style Fixes; Email Footer; This update includes the code changes to fix some of the styles, I've included the rest of the fixes for the contact page (the code stuff we weren't able to change Friday.) and I've visually centered the header logo to try and have it look like its centered in the whitespace. I've also edited the email footer for each Sadie and I. We threw these in, and they are added here (in seperate files) for back-up purposes, and ease of editing. We should also address the LinkedIn profile, I'm thinking the icons to the right should be general to our site (like Rattan Outdoor Furniture links, site and profiles.) We can address this later, but we should have a LinkedIn Company Profile anyways. Besides that though, I had some fixes to make to get things to load correctly, I'm still making sure everything is in the right place and things are pointing correctly for the different versions of the site. I feel that this will flesh itself out the more we get used to a method of updaing, and as I feel more comfortable with everything. I am still quite hesitent to mess anything up, and as such, am being overly cautious with any of the file changes. I am going to move forward by looking into the location pages import, where it updates the phone number and email from the text, and this fix will also fix the block of text showing up at the top of the city pages. I would also like to set-up the Specials page correctly and create the "Friends" page for our link swapping. I'm not sure how far I will get with either of these, but I would like to get these pages set up, and I think that has a little more priority than fixing up the location pages, although, there are a few fixes needed there, and we are going to want to start marking those off the list in order to get to the point of being able to add those pages in.
Former-commit-id: cd26fa53cf1d29dd451cbbcf111a4ce0e8ff1353

--- a/skin/frontend/default/rofcustom/css/cart-checkout.css
+++ b/skin/frontend/default/rofcustom/css/cart-checkout.css
@@ -1131,7 +1131,6 @@ img, button, input {
         position: relative;
         padding: 10px 0 0;
     }
-
     .account-box .buttons-set,
     .my-account .buttons-set {
         clear: left;
@@ -1144,7 +1143,23 @@ img, button, input {
         margin-left: 10px !important;
     }
 
-    .account-box .back-link,
+    /* Fixes for Contact Page
+    *******************************************/
+    .contacts-index-index .buttons-set {
+        clear: none;
+        margin-right: 85px;
+        margin-top: 5px;
+    }
+    .contacts-index-index #comment {
+        height: 230px;
+        margin-bottom: 0 !important;
+    }
+    #form-list-contact-us,
+    #content-contact-us p:last-child {
+        margin-bottom: 0 !important;
+    }
+
+.account-box .back-link,
     .account-box .account-sub-button,
     .my-account .back-link,
     .my-account .account-sub-button {
